fix fonts on safari

--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,23 +1,23 @@
 @font-face {
   font-family: "PPNeueMachina-Regular";
-  src: url("../styles/PPNeueMachina-Regular.otf") format("opentype"),
-    url("../styles/PPNeueMachina-Regular.woff") format("woff");
+  src: url("../styles/PPNeueMachina-Regular.otf"),
+    url("../styles/PPNeueMachina-Regular.woff");
 }
   
 @font-face {
   font-family: "PPNeueMachina-Ultrabold";
-  src: url("../styles/PPNeueMachina-Ultrabold.otf") format("opentype"),
-    url("../styles/PPNeueMachina-Ultrabold.woff") format("woff");
+  src: url("../styles/PPNeueMachina-Ultrabold.otf"),
+    url("../styles/PPNeueMachina-Ultrabold.woff");
 }
   
 @font-face {
   font-family: "ObjectSans-Regular";
-  src: url("../styles/PPObjectSans-Regular.otf") format("opentype"),
-    url("../styles/PPObjectSans-Regular.woff") format("woff");
+  src: url("../styles/PPObjectSans-Regular.otf"),
+    url("../styles/PPObjectSans-Regular.woff");
 }
   
 @font-face {
   font-family: "ObjectSans-Bold";
-  src: url("../styles/PPObjectSans-Bold.otf") format("opentype"),
-    url("../styles/PPObjectSans-Bold.woff") format("woff");
+  src: url("../styles/PPObjectSans-Bold.otf"),
+    url("../styles/PPObjectSans-Bold.woff");
 }
